  * Prefix all fatal error messages with “error: ”.
  * Do not check presence of update-rc.d in the PATH in dpkg, as it's not
    a program needed for dpkg correct operation.
  * Fix dpkg -GEO options on multiple versions of the same packages.
    Closes: #31141
  * Propagate --admindir to programs run from maintainer scritpts.
    Closes: #97076

  [ Raphaël Hertzog ]
  * Fail properly when debian/source/format is empty. Closes: #600854
  * Add new deb-src-control(5) manual page documenting the debian/control
    file contained in source packages.
    - it documents the X[SBC]- prefix. Closes: #476335
    - it documents the VCS-* fields too. Closes: #483119
    Thanks to Oxan van Leeuwen <oxan@oxanvanleeuwen.nl> who wrote it
    as part of the Google Code In program.
  * Enhance dpkg-shlibdeps to not fail immediatly when a library is not found.
    Instead continue and fail after all problems have been reported. Thanks
    to Chris Baines <cbaines8@gmail.com> for the patch. Closes: #596841
  * Fix dpkg-source to not list Debian packaging files as modified
    upstream files in Format "1.0" when unpacking to a non-standard
    directory.

  [ Jonathan Nieder ]
  * Remove support for use of synchronous sync(2), due to its pernicious
    side-effects and to ease maintenance.

  [ Updated programs translations ]
  * Portuguese (Miguel Figueiredo).
  * Spanish (Javier Fernandez-Sanguino).
  * Swedish (Peter Krefting).

  [ Updated man page translations ]
  * German (Helge Kreutzmann).
  * Swedish (Peter Krefting).

  [ Updated scripts translations ]
  * German (Helge Kreutzmann).
  * Swedish (Peter Krefting).

  [ Updated dselect translations ]
  * Spanish (Javier Fernandez-Sanguino).

 -- Guillem Jover <guillem@debian.org>  Thu, 29 Jul 2010 11:00:22 +0200

dpkg (1.15.8.8) unstable; urgency=low

  [ Guillem Jover ]
  * Truncate the output part file on “dpkg-split -s”. Regression introduced
    with the C rewrite.

  [ Updated man page translations ]