@@ -22,6 +22,9 @@ dpkg (1.16.0) UNRELEASED; urgency=low
     Closes: #31141
   * Propagate --admindir to programs run from maintainer scritpts.
     Closes: #97076
+  * Do not fail when trying to remove the root directory. This will only
+    happen either on distributions where dpkg is a foreign package manager,
+    or on artificial dpkg databases.
 
   [ Raphaël Hertzog ]
   * Fail properly when debian/source/format is empty. Closes: #600854
